[package]
name = "imgui-winit-support"
version = "0.3.0-pre"
edition = "2018"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>", "imgui-rs contributors"]
description = "winit support code for the imgui crate"
homepage = "https://github.com/Gekkio/imgui-rs"
repository = "https://github.com/Gekkio/imgui-rs"
license = "MIT/Apache-2.0"
categories = ["gui"]

[badges]
travis-ci = { repository = "Gekkio/imgui-rs" }

[dependencies]
imgui = { version = "0.3.0-pre", path = "../" }
winit-19 = { version = ">= 0.16, <= 0.19", package = "winit", optional = true }
winit-20 = { git = "https://github.com/rust-windowing/winit", rev = "b8828105cf6231e249da279851285aecd2970b4b", package = "winit", optional = true}

[features]
default = ["winit-19"]
